# mm-boat-docker

./: .coverage  .gitignore  README.md  index.html  package.json  pyproject.toml  showcase.py
docs/: missing-physics.md  prop-walk-KVLCC2-coefficients.md  prop-walk.md  sailboat-beneteau-first-36.7-technical-data.md  sailboat-coefficients-ranges.md  sailboat-j-105-technical-data.md  sailboat-models-with-technical-data.md  sailboat-navy-44-technical-data.md  sailboat-physics.md  tanker-KVLCC2-benchmark.md
lib/: boat-controller.ts
lib/jsmaneuvering/src/: vessel.js
lib/jsmaneuvering/src/mmg/: dynamics.js  propeller.js  rudder.js
lib/jsmaneuvering/tests/: calibration.test.js  mmg.test.js
scripts/: turning-circle-report.mjs
src/: camera-look-ahead.ts  keyboard-axis-controller.ts  main.ts  rendering-engine.ts  style.css
src/mmgdynamics/: __init__.py
src/pymaneuvering/: __init__.py
src/pymaneuvering/abkowitz/: calibrated_vessels.py  dynamics.py
src/pymaneuvering/mmg/: dynamics.py
src/pymaneuvering/utils/: common.py
src/vessels/: index.ts  j105.ts  kvlcc2-full-scale.ts  kvlcc2-l64.ts  navy-44.ts  tanker.ts  types.ts
tests/: boat-controller.test.ts  camera-look-ahead.test.ts  keyboard-axis-controller.test.ts
tmp/: calc_expectations.js
